changes' is much more useful than 'misc edits' or 'code cleanup'.
3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------

Fix for bug 1850524 - SDL clients crash when entering boat.  Bogus scroll
values were being sent on mapscroll, but only the SDL client did anything
with the mapscroll variables, so only it saw problems.
---
types/transport/transport.c: Store away player x and y positions so we
  can do proper comparisions.  Move update of applier values out of
  if coordinates are different, since those need to get updated in all
  cases.
MSW 2008-01-27

Changes for SVN:
Fix for #1878361: "Hill Giants no longer throw boulders"
Modified files:
 server/skills.c
Yann "gros" Chachkoff, 2008-01-27

Fix for #1878323: "trunk server crashes when praying on alter"
Modified files:
 server/gods.c
Yann "gros" Chachkoff, 2008-01-27

New plugin: citylife. Adds NPCs to town, to make them more lively.
See the plugin documentation for more details.
Modified files:
 configure.ac: build new plugin.
 doc/Developers/mainpage.dox: link to plugin documentation.
 plugins/Makefile.am: build new plugin.
Added files:
 plugins/citylife/include/citylife.h
 plugins/citylife/citylife.c
 plugins/citylife/Makefile.am
Nicolas Weeger, 2008-01-27

Fix template plugin generation and compilation.
 plugins/template/plugin_template.c: fix compilation and parameter order for strncpy.
 plugins/template/create_plugin.sh: missing "exit" to quit if no name.
Nicolas Weeger, 2008-01-26

utils/mapper.c: new option, "-regionslink", to generate a .dot file containing
 relationship between regions. New option "-noworldmap" to not generate the full
 world map. Use region's longname instead of the short name in regions index.